# tflite-cad-api

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  run.sh
.github/workflows/: azure_deploy.yml
model/: prediction.py
model/cad_classifier/: keras_metadata.pb  saved_model.pb
model/cad_classifier/variables/: variables.data-00000-of-00001  variables.index
